# RaycasterTest

./: .gitignore  CMakeLists.txt
apps/: CMakeLists.txt  boosh_test.c  raycaster_test.c
assets/shaders/: screen.fs  screen.vs
cmake/: FindGLEW.cmake  FindGLFW3.cmake  FindSOIL.cmake
include/boosh/: boosh.h  cgmath.h
include/raycaster_engine/: raycaster_engine.h
sources/: CMakeLists.txt  helperfuncs.c  helperfuncs.h  linalg.c  linalg.h  main.c  raycaster.c  raycaster.h
src/: CMakeLists.txt  boosh.c  cgmath.c  raycaster_engine.c
test/: CMakeLists.txt  test.c  test_cgmath.c
